# vpt

./: Cargo.toml  Elements.py  LICENSE  README.md  cc.cfg  cfg.py  delete.py  helppage.py  install.py  lmt  lmt-gui.py  lmt.conf  lmt.py  lmtgui.py  main.py  main.spec  ntgcfg.py  protect.py  search  search-repo  search-repo.go  search.go  search.py  test.py  update.py  vpt.conf
.cargo/: config.toml
.github/workflows/: python-app.yml  rust-clippy.yml  rust.yml  test-functions.yml  test-help.yml  test-install.yml
immutability/: Cargo.toml
immutability/src/: lib.rs
src/: debug.rs  imut_api.rs  legacy-main.rs  main.rs  neutron.rs  vpl.rs
tools/: find_opt.sh
vmod/: Cargo.toml
vmod/src/: lib.rs
