[package]
name = "vpt"
version = "0.13.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
words-count = "0.1.3"
nix = "0.26.1"
sqlite = "0.30.3"
lazy_static  = "1.4.0"
version-compare = "0.1.0"
rand = "0.8.4"
base64 = "0.21.0"
tempdir = "0.3.7"