[package]
name = "vpt"
version = "0.14.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26.1"
colour = "0.7.0"
indicatif = "0.17.3"


# Vefjiaw's dependencies
vmod = { path = "vmod"}
immutability = { path = "immutability"}
